--- a/src/app/games/game.list.pug
+++ b/src/app/games/game.list.pug
@@ -48,9 +48,9 @@ include ../template/paginator
 		.input-group.padder-bottom
 			span.input-group-addon.input-group-addon--search
 				+icon('search').smaller
-			input.form-control.input--search(ng-model="vm.q", type="text", placeholder="Search")
+			input.form-control.input--search(ng-model="vm.query.q", type="text", placeholder="Search")
 
-		input#includeEmptyGames.checkbox--toggle(type='checkbox', ng-model="vm.includeEmptyGames")
+		input#includeEmptyGames.checkbox--toggle(type='checkbox', ng-model="vm.query.includeEmptyGames")
 		label(for="includeEmptyGames")
 		label.a.a--light.padder-bottom(for="includeEmptyGames") Include empty games
 		.clearfix
@@ -61,31 +61,31 @@ include ../template/paginator
 			panel--inner(uib-accordion-group, is-open="vm.filterYearOpen")
 				div(uib-accordion-heading) by Year
 				.row
-					.col-xs-6.text-center.a(filter-decade="1960") 1960s
-					.col-xs-6.text-center.a(filter-decade="1970") 1970s
-					.col-xs-6.text-center.a(filter-decade="1980") 1980s
-					.col-xs-6.text-center.a(filter-decade="1990") 1990s
-					.col-xs-6.text-center.a(filter-decade="2000") 2000s
-					.col-xs-6.text-center.a(filter-decade="2010") 2010s
+					.col-xs-6.text-center.a(filter-decade="1960", ng-model="vm.query.filterDecades") 1960s
+					.col-xs-6.text-center.a(filter-decade="1970", ng-model="vm.query.filterDecades") 1970s
+					.col-xs-6.text-center.a(filter-decade="1980", ng-model="vm.query.filterDecades") 1980s
+					.col-xs-6.text-center.a(filter-decade="1990", ng-model="vm.query.filterDecades") 1990s
+					.col-xs-6.text-center.a(filter-decade="2000", ng-model="vm.query.filterDecades") 2000s
+					.col-xs-6.text-center.a(filter-decade="2010", ng-model="vm.query.filterDecades") 2010s
 
 			// manufacturer filter
 			.panel--inner(uib-accordion-group, is-open="vm.filterManufacturerOpen")
 				div(uib-accordion-heading) by Manufacturer
 				.row
-					.col-xs-6.text-center.a(filter-manufacturer="Bally") Bally
-					.col-xs-6.text-center.a(filter-manufacturer="Capcom") Capcom
-					.col-xs-6.text-center.a(filter-manufacturer="Stern") Stern
-					.col-xs-6.text-center.a(filter-manufacturer="Williams") Williams
-					.col-xs-6.text-center.a(filter-manufacturer="Gottlieb") Gottlieb
-					.col-xs-6.text-center.a(filter-manufacturer="Data East") Data East
+					.col-xs-6.text-center.a(filter-manufacturer="Bally", ng-model="vm.query.filterManufacturer") Bally
+					.col-xs-6.text-center.a(filter-manufacturer="Capcom", ng-model="vm.query.filterManufacturer") Capcom
+					.col-xs-6.text-center.a(filter-manufacturer="Stern", ng-model="vm.query.filterManufacturer") Stern
+					.col-xs-6.text-center.a(filter-manufacturer="Williams", ng-model="vm.query.filterManufacturer") Williams
+					.col-xs-6.text-center.a(filter-manufacturer="Gottlieb", ng-model="vm.query.filterManufacturer") Gottlieb
+					.col-xs-6.text-center.a(filter-manufacturer="Data East", ng-model="vm.query.filterManufacturer") Data East
 
 		h1 Sort
 		hr
 		ul.list--sort-options
-			li.a.asc(sort="title", d="asc") Name
-			li.a(sort="year", d="asc") Year
-			li.a(sort="rating", d="desc") Rating
-			li.a(sort="popularity", d="desc") Popularity
+			li.a.asc(sort="title", sort-default="asc", ng-model="vm.query.sort") Name
+			li.a(sort="year", sort-default="asc", ng-model="vm.query.sort") Year
+			li.a(sort="rating", sort-default="desc", ng-model="vm.query.sort") Rating
+			li.a(sort="popularity", sort-default="desc", ng-model="vm.query.sort") Popularity
 
 		//-- UPLOAD BUTTONS
 		//---------------------------------------------------------------------
