--- a/src/app/releases/release.list.pug
+++ b/src/app/releases/release.list.pug
@@ -43,7 +43,7 @@ include ../template/paginator
 				div(ng-switch-when="compact")
 					.col-md-4.col-sm-6.col-xs-12.fade-animation(ng-repeat="release in vm.releases", ui-sref="releaseDetails({ id: release.game.id, releaseId: release.id })")
 						.panel.panel--animated.ng-cloak
-							.img.img--rounded-top(img-bg="release.thumb.image.url", ng-class="flavorFilter && flavorFilter.orientation === 'ws' ? 'img--ar-ws' : 'img--ar-fs'")
+							.img.img--rounded-top(img-bg="release.thumb.image.url", ng-class="vm.query.filterFlavor && vm.query.filterFlavor.orientation === 'ws' ? 'img--ar-ws' : 'img--ar-fs'")
 							.text-center.padder-horizontal
 								h1.h--small {{ release.game.title }}
 								label.label--subtitle {{ release.name }}
@@ -99,14 +99,14 @@ include ../template/paginator
 		.panel-group--transparent(uib-accordion, close-others="false")
 
 			// compat filter
-			.panel--inner(uib-accordion-group, is-open="vm.filterBuildOpen")
+			.panel--inner(uib-accordion-group, is-open="vm.filterBuildsOpen")
 				div(uib-accordion-heading) by Compatibility
 				.row
 					p.space-left-2x Official:
-					.col-xs-6.text-center.a(ng-repeat="build in vm.builds | filter:{is_range:false,type:'release'}" filter-build="{{ build.id }}", ng-model="vm.query.filterBuilds") {{ build.label }}
+					.col-xs-6.text-center.a(ng-repeat="build in vm.builds | filter:{is_range:false,type:'release'}" filter-array="{{ build.id }}", ng-model="vm.query.filterBuilds") {{ build.label }}
 				.row
 					p.space-left-2x.padder-top Experimental:
-					.col-xs-6.text-center.a(ng-repeat="build in vm.builds | filter:{is_range:false,type:'experimental'}" filter-build="{{ build.id }}", ng-model="vm.query.filterBuilds") {{ build.label }}
+					.col-xs-6.text-center.a(ng-repeat="build in vm.builds | filter:{is_range:false,type:'experimental'}" filter-array="{{ build.id }}", ng-model="vm.query.filterBuilds") {{ build.label }}
 
 			// flavor filters
 			.panel--inner(uib-accordion-group, ng-repeat="flavor in vm.flavors", is-open="vm.filterFlavorOpen[flavor.name]")
@@ -115,37 +115,37 @@ include ../template/paginator
 					li
 						.radio--lg
 							label
-								input(type="radio", name="{{ flavor.name }}", value="", ng-model="flavorFilter[flavor.name]", ng-change="onFlavorChange()")
+								input(type="radio", name="{{ flavor.name }}", value="", ng-model="vm.query.filterFlavor[flavor.name]")
 								span No Filter
 
 					li(ng-repeat="flavorVal in flavor.values")
 						.radio--lg.radio--lg-twoliner
 							label
-								input(type="radio", name="{{ flavor.name }}", value="{{ flavorVal.value }}", ng-model="flavorFilter[flavor.name]", ng-change="onFlavorChange()")
+								input(type="radio", name="{{ flavor.name }}", value="{{ flavorVal.value }}", ng-model="vm.query.filterFlavor[flavor.name]")
 								span {{ flavorVal.name }}
 								span: i {{ flavorVal.other }}
 
 			// tag filter
-			.panel--inner(uib-accordion-group, is-open="vm.filterTagOpen")
+			.panel--inner(uib-accordion-group, is-open="vm.filterTagsOpen")
 				div(uib-accordion-heading) by Tag
 				.row
-					.col-xs-6.text-center.a(ng-repeat="tag in vm.tags" filter-tag="{{ tag.id }}", title="{{ tag.description }}") {{ tag.name }}
+					.col-xs-6.text-center.a(ng-repeat="tag in vm.tags" filter-array="{{ tag.id }}", ng-model="vm.query.filterTags", title="{{ tag.description }}") {{ tag.name }}
 
 			// validation filter
 			.panel--inner(uib-accordion-group, is-open="vm.filterValidationOpen")
 				div(uib-accordion-heading) by Validation
 				.row
-					.col-xs-6.col-lg-3.text-center.a(ng-class="{active: $parent.$parent.validation === 'verified'}", ng-click="vm.toggleValidation('verified')")
+					.col-xs-6.col-lg-3.text-center.a(filter-array="verified", ng-model="vm.query.filterValidation")
 						+icon('medal-verified').svg-3x.padder-bottom
 						| Verified
-					.col-xs-6.col-lg-3.text-center.a(ng-class="{active: $parent.$parent.validation === 'playable'}", ng-click="vm.toggleValidation('playable')")
+					.col-xs-6.col-lg-3.text-center.a(filter-array="playable", ng-model="vm.query.filterValidation")
 						+icon('medal-playable').svg-3x.padder-bottom
 						| Playable
 					.clearfix.show.hidden-lg.padder-bottom
-					.col-xs-6.col-lg-3.text-center.a(ng-class="{active: $parent.$parent.validation === 'broken'}", ng-click="vm.toggleValidation('broken')")
+					.col-xs-6.col-lg-3.text-center.a(filter-array="broken", ng-model="vm.query.filterValidation")
 						+icon('medal-broken').svg-3x.padder-bottom
 						| Broken
-					.col-xs-6.col-lg-3.text-center.a(ng-class="{active: $parent.$parent.validation === 'none'}", ng-click="vm.toggleValidation('none')")
+					.col-xs-6.col-lg-3.text-center.a(filter-array="none", ng-model="vm.query.filterValidation")
 						+icon('medal-unknown').svg-3x.padder-bottom
 						| None
 
