--- a/src/app/games/details-01-gameinfo.pug
+++ b/src/app/games/details-01-gameinfo.pug
@@ -9,9 +9,9 @@ img.img--logo(ng-src="{{ vm.App.img(vm.game.logo, 'medium') }}")
 .ratingbox(
 	rating-avg="vm.game.rating.average",
 	rating-votes="vm.game.rating.votes",
-	rating-user="vm.gameRating"
-	rating-action="vm.rateGame($rating)"
-	rating-readonly="!vm.AuthService.hasPermission('games/rate')"
+	rating-user="vm.userGameRating",
+	rating-action="vm.rateGame($rating)",
+	rating-readonly="{{ !vm.AuthService.hasPermission('games/rate') }}"
 )
 
 top-badge(ng-model="vm.game.pinside.ranks", site="Pinside", href="https://pinside.com/pinball/archive/{{ vm.game.pinside.ids[0] }}")
