--- a/src/app/releases/release.add.version.pug
+++ b/src/app/releases/release.add.version.pug
@@ -53,19 +53,19 @@ include ../template/_mixins
 
 		h1 1. Upload Files
 		hr
-		include add-01-upload.files.pug
+		include release.add-01-upload.files.pug
 
 		h1 2. Define your Flavors
 		hr
-		include add-03-flavors.pug
+		include release.add-03-flavors.pug
 
 		h1 3. Set Compatibility
 		hr
-		include add-05-compat.pug
+		include release.add-05-compat.pug
 
 		h1 4. Upload Media
 		hr
-		include add-07-upload.media.pug
+		include release.add-07-upload.media.pug
 
 		//------------------------- FINISH LINE -------------------------------
 		//---------------------------------------------------------------------
