--- a/src/app/releases/release.add-01-upload.files.pug
+++ b/src/app/releases/release.add-01-upload.files.pug
@@ -1,6 +1,6 @@
 p Drag and drop your files from the file explorer into the box below.
-#file-upload.panel.panel--dropzone(
-	file-upload="{ controller: vm, type: 'release', status: vm.meta.files, beforeUpload: vm.beforeFileUpload, onSuccess: vm.onFileUpload, onError: vm.onFileUploadError, allowedExtensions: ['vpt', 'vpx', 'mp3', 'vbs', 'txt', 'md', 'rar', 'zip'], allowMultipleFiles: true, disableSelect: true }"
+#files-upload.panel.panel--dropzone(
+	file-upload="{ controller: vm, type: 'release', status: vm.meta.files, beforeUpload: vm.beforeFileUpload, onSuccess: vm.onFileUpload, onError: vm.onFileUploadError, allowedExtensions: ['vpt', 'vpx', 'mp3', 'vbs', 'txt', 'md', 'rar', 'zip'], allowMultipleFiles: true }"
 	ngf-drag-over-class="'panel--dragging'",
 	ng-class="{ error: vm.filesError }"
 )
