--- a/src/app/releases/release.add.pug
+++ b/src/app/releases/release.add.pug
@@ -81,7 +81,7 @@ include ../template/_mixins
 		.alert.alert-danger.alert--inverted.padder-bottom(ng-show="vm.errors && vm.errors.__count")
 			+icon('warning').shift-up.space-right
 			| There were errors while submitting your release. Please scroll up and fix the marked fields.
-		button.btn.btn-default.btn-lg(ng-click="vm.reset()", ng-disabled="!vm.AuthService.isAuthenticated") Reset
+		button#reset-btn.btn.btn-default.btn-lg(ng-click="vm.reset()", ng-disabled="!vm.AuthService.isAuthenticated") Reset
 		button#submit-btn.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting || !vm.AuthService.isAuthenticated") Add New Release
 		.clearfix
 
