test: Refactor parent locator.

--- a/src/app/releases/release.add-07-upload.media.pug
+++ b/src/app/releases/release.add-07-upload.media.pug
@@ -2,7 +2,7 @@
 	+icon('info')
 	p These show off your work. You should provide both screenshot and video at full HD resolution at <i>1920&times;1080</i> for every table file you've provided in step {{ step.flavors }}. The screenshot is mandatory. If you provide a video, it should show the table in attract mode (no gameplay).
 	p Use the rotate buttons to rotate the screenshot so it's oriented as you would play it.
-span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
+span#media(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 	h2.h--smaller
 		+icon('{{ file.icon }}').svg-2x.shift-up.space-right-less
 		| {{ file.name }}
