--- a/src/styles/media.styl
+++ b/src/styles/media.styl
@@ -135,3 +135,8 @@
 	padding-right 15px
 	padding-top 5px
 	padding-bottom 5px
+
+// in typeahead
+.uib-typeahead-match > .media > img
+	margin-top 5px
+	margin-left 5px
