refactor: Make DOM IDs unique.

--- a/src/app/games/game.add.admin.pug
+++ b/src/app/games/game.add.admin.pug
@@ -297,8 +297,8 @@ include ../template/_mixins
 						li There should be enough contrast on white as well as on black background.
 
 			hr
-			button#reset-btn.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
-			button#submit-btn.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Add New Game
+			button#game-reset-btn.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
+			button#game-submit-btn.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Add New Game
 			.clearfix
 
 			p
