--- a/src/app/releases/release.add-04-release.notes.pug
+++ b/src/app/releases/release.add-04-release.notes.pug
@@ -17,7 +17,7 @@
 				ng-model="vm.meta.releaseDate",
 				uib-datepicker-popup="yyyy-MM-dd",
 				format-day-header="EE"
-				is-open="calendarOpened",
+				is-open="vm.calendarOpened",
 				close-text="Close",
 				show-weeks="false",
 				starting-day="1",
