--- a/src/app/releases/release.add-04-tags.pug
+++ b/src/app/releases/release.add-04-tags.pug
@@ -25,7 +25,7 @@
 			i(ng-show="vm.meta.tags.length == 0") No tags selected. Drag and drop them from the right hand pane in here.
 	.col-sm-6
 		.rel-pos
-			#tags.panel--dropzone-alt-2(
+			#available-tags.panel--dropzone-alt-2(
 				ng-model="vm.tags",
 				data-drop="true",
 				data-jqyoui-options="{ accept:':not([ng-model=tags])', activeClass: 'active', hoverClass: 'hover' }",
