--- a/src/app/tag/tag.add.modal.pug
+++ b/src/app/tag/tag.add.modal.pug
@@ -26,5 +26,5 @@ include ../template/_mixins
 				| {{ vm.errors.description }}
 
 	.modal-footer
-		button#cancel-btn.btn.btn-default(ng-click="$dismiss()") Cancel
-		button#submit-btn.btn.btn--secondary(ng-click="vm.create()") Create
+		button#tag-cancel-btn.btn.btn-default(ng-click="$dismiss()") Cancel
+		button#tag-submit-btn.btn.btn--secondary(ng-click="vm.create()") Create
