test(release-add): Should add minimal release.

--- a/src/app/releases/release.add-04-mod.permission.pug
+++ b/src/app/releases/release.add-04-mod.permission.pug
@@ -1,6 +1,6 @@
 p Can this release be freely modded?
 
-.row.row--fullwidth.row--no-margin
+#mod-permission.row.row--fullwidth.row--no-margin
 	.col-md-offset-1.col-md-11
 
 		.radio--lg
