--- a/src/app/releases/release.add-02-name.pug
+++ b/src/app/releases/release.add-02-name.pug
@@ -1,7 +1,7 @@
 .form-group(ng-class="{ error: vm.errors.name }")
 	.input-group
 		input#name.form-control.input-lg(type="text", placeholder="Title", ng-model="vm.release.name", ng-disabled="!vm.AuthService.isAuthenticated")
-		span.input-group-addon(uib-tooltip="Click for an inspirational random title!", tooltip-placement="right", tooltip-append-to-body="true")
+		span#generate-name-btn.input-group-addon(uib-tooltip="Click for an inspirational random title!", tooltip-placement="right", tooltip-append-to-body="true")
 			+icon('bulb').a(ng-click="vm.generateReleaseName()")
 	.alert.alert-danger(ng-show="vm.errors.name")
 		+icon('warning').shift-up.space-right
